// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshots do texto impresso composto (classe + subclasse entrelaçados) — nível 14 de cada subclasse > Fanático nível 20 1`] = `
[
  "#Fúria [__][__][__][__][__][__]
AB, Res Conc/Cort/Perf; +4 de dano
Vant testes/Salv
Dura 10 min; termina Inconsciente ou Arm Pesada
+1 uso/DC, todos/DL
> [__] Inic: recupere todos os usos, 1/DL",
  "#Ataque Imprudente
Vant em atqs para e contra você",
  "#Sentido de Perigo
Vant em Salv DEX, exceto Incapacitado",
  "#Conhecimento Primordial
Fúria: Acro, Furt, Int, Perc e Sobr usam FOR",
  "#Campeão dos Deuses
d12: [__][__][__][__][__][__][__]
AB: gaste dados e cure o total
Todos/DL",
  "#Fúria Divina
Fúria: 1º acerto/turno +1d6+10 Necr ou Rad",
  "#Ataque Extra",
  "#Concentração Fanática
1×/Fúria, falha Salv: refaça com +Dano da Fúria",
  "#Bote Instintivo
Entrar em Fúria: mova até ½ Desl",
  "#Instintos Primitivos
Vant em Inic",
  "#Golpe Brutal
Atq Imprudente: abra mão da Vant em 1 Atq FOR; acerto +2d10 e escolha 2:
> Debilitador: Desl -4,5m
> Poderoso: empurra 4,5m; mova ½ Desl até alvo sem Atq Oport
> Atordoante: Desv na próx Salv; sem Atq Oport
> Destruidor: próx Atq de outra criatura contra alvo +5",
  "#Presença Zelosa [__]
AB: até 10 criaturas a 18m têm Vant em Atq/Salv até próx turno
DL ou gaste 1 Fúria",
  "#Fúria Implacável
Fúria, 0 PV: Salv CON CD10; sucesso PV = 2× nível
Novo uso: CD +5; DC/DL: CD10",
  "#Fúria dos Deuses [__]
Entrar em Fúria: forma divina por 1 min. DL
> Res Necr/Psiq/Rad
> Reação: criatura a 9m cairia a 0 PV → gaste 1 Fúria; PV = seu nível
> Voo = Desl; pode pairar",
  "#Força Indomável
Teste/Salv FOR < FOR: use FOR",
]
`;

exports[`snapshots do texto impresso composto (classe + subclasse entrelaçados) — nível 14 de cada subclasse > arvore nível 14 1`] = `
[
  "#Fúria [__][__][__][__][__]
AB, Res Conc/Cort/Perf; +3 de dano
Vant testes/Salv
Até fim do próx turno; estende se: Atacar, forçar Salv ou usar AB; máx de 10 min
+1 uso/DC, todos/DL",
  "#Ataque Imprudente
Vant em atqs para e contra você",
  "#Sentido de Perigo
Vant em Salv DEX, exceto Incapacitado",
  "#Conhecimento Primordial
Fúria: Acro, Furt, Int, Perc e Sobr usam FOR",
  "#Vitalidade da Árvore
> Entrar em Fúria: PV Temp = nível
> Início turno: outra criatura a 3m recebe 3d6 PV Temp",
  "#Ataque Extra",
  "#Ramos da Árvore
Fúria, Reação: criatura a 9m inicia turno → Salv FOR CD 8+FOR+Prof
Falha: teleporta até 1,5m de você; pode ficar Desl 0",
  "#Bote Instintivo
Entrar em Fúria: mova até ½ Desl",
  "#Instintos Primitivos
Vant em Inic",
  "#Golpe Brutal
Atq Imprudente: abra mão da Vant em 1 Atq FOR; acerto +1d10 e escolha:
> Debilitador: Desl -4,5m
> Poderoso: empurra 4,5m; mova ½ Desl até alvo sem Atq Oport
> Atordoante: Desv na próx Salv; sem Atq Oport
> Destruidor: próx Atq de outra criatura contra alvo +5",
  "#Raízes Devastadoras
Arma Pesada/Versátil: +3m alcance
Acerto: Derrubar ou Empurrar + outra Maestria",
  "#Fúria Implacável
Fúria, 0 PV: Salv CON CD10; sucesso PV = 2× nível
Novo uso: CD +5; DC/DL: CD10",
  "#Percorrer a Árvore
Fúria: teleporte 18m ao entrar ou com AB
> 1×/Fúria: 45m + até 6 criaturas",
]
`;

exports[`snapshots do texto impresso composto (classe + subclasse entrelaçados) — nível 14 de cada subclasse > berserker nível 14 1`] = `
[
  "#Fúria [__][__][__][__][__]
AB, Res Conc/Cort/Perf; +3 de dano
Vant testes/Salv
Até fim do próx turno; estende se: Atacar, forçar Salv ou usar AB; máx de 10 min
+1 uso/DC, todos/DL",
  "#Ataque Imprudente
Vant em atqs para e contra você",
  "#Sentido de Perigo
Vant em Salv DEX, exceto Incapacitado",
  "#Conhecimento Primordial
Fúria: Acro, Furt, Int, Perc e Sobr usam FOR",
  "#Frenesi
Fúria + Atq Imprudente, o 1º alvo acertado/turno com Atq FOR sofre +3d6 do mesmo tipo",
  "#Ataque Extra",
  "#Fúria Irracional
Fúria: Imune a Amedrontado/Enfeitiçado; ao entrar, encerra ambos",
  "#Bote Instintivo
Entrar em Fúria: mova até ½ Desl",
  "#Instintos Primitivos
Vant em Inic",
  "#Golpe Brutal
Atq Imprudente: abra mão da Vant em 1 Atq FOR; acerto +1d10 e escolha:
> Debilitador: Desl -4,5m
> Poderoso: empurra 4,5m; mova ½ Desl até alvo sem Atq Oport
> Atordoante: Desv na próx Salv; sem Atq Oport
> Destruidor: próx Atq de outra criatura contra alvo +5",
  "#Retaliação
Reação ao sofrer dano de criatura a 1,5m: 1 Atq corpo a corpo",
  "#Fúria Implacável
Fúria, 0 PV: Salv CON CD10; sucesso PV = 2× nível
Novo uso: CD +5; DC/DL: CD10",
  "#Presença Intimidante [__]
AB, 9m: Salv SAB CD 8+FOR+Prof; falha: Amedrontado 1 min
Repete Salv no fim do turno
DL ou gaste 1 Fúria",
]
`;

exports[`snapshots do texto impresso composto (classe + subclasse entrelaçados) — nível 14 de cada subclasse > coracao nível 14 1`] = `
[
  "#Fúria [__][__][__][__][__]
AB, Res Conc/Cort/Perf; +3 de dano
Vant testes/Salv
Até fim do próx turno; estende se: Atacar, forçar Salv ou usar AB; máx de 10 min
+1 uso/DC, todos/DL",
  "#Ataque Imprudente
Vant em atqs para e contra você",
  "#Sentido de Perigo
Vant em Salv DEX, exceto Incapacitado",
  "#Conhecimento Primordial
Fúria: Acro, Furt, Int, Perc e Sobr usam FOR",
  "#Fúria dos Selvagens
Ao entrar em Fúria, escolha:
> Águia: Correr+Desengajar na mesma AB; em Fúria, AB faz ambos
> Lobo: aliados têm Vant em Atq contra inimigos a 1,5m
> Urso: Res a todo dano exc Energ, Necr, Psiq e Rad",
  "#Ataque Extra",
  "#Aspecto dos Selvagens
Escolha; pode trocar/DL:
> Coruja: Visão no Escuro 18m ou +18m
> Pantera: Desl Escalada = Desl
> Salmão: Desl Natação = Desl",
  "#Bote Instintivo
Entrar em Fúria: mova até ½ Desl",
  "#Instintos Primitivos
Vant em Inic",
  "#Golpe Brutal
Atq Imprudente: abra mão da Vant em 1 Atq FOR; acerto +1d10 e escolha:
> Debilitador: Desl -4,5m
> Poderoso: empurra 4,5m; mova ½ Desl até alvo sem Atq Oport
> Atordoante: Desv na próx Salv; sem Atq Oport
> Destruidor: próx Atq de outra criatura contra alvo +5",
  "#Fúria Implacável
Fúria, 0 PV: Salv CON CD10; sucesso PV = 2× nível
Novo uso: CD +5; DC/DL: CD10",
  "#Poder dos Selvagens
Ao entrar em Fúria, escolha:
> Carneiro: Atq corpo a corpo pode deixar alvo Grande ou menor Caído
> Falcão: Desl Voo = Desl, sem armadura
> Leão: inimigos a 1,5m têm Desv em Atq contra outros",
]
`;

exports[`snapshots do texto impresso composto (classe + subclasse entrelaçados) — nível 14 de cada subclasse > fanatico nível 14 1`] = `
[
  "#Fúria [__][__][__][__][__]
AB, Res Conc/Cort/Perf; +3 de dano
Vant testes/Salv
Até fim do próx turno; estende se: Atacar, forçar Salv ou usar AB; máx de 10 min
+1 uso/DC, todos/DL",
  "#Ataque Imprudente
Vant em atqs para e contra você",
  "#Sentido de Perigo
Vant em Salv DEX, exceto Incapacitado",
  "#Conhecimento Primordial
Fúria: Acro, Furt, Int, Perc e Sobr usam FOR",
  "#Campeão dos Deuses
d12: [__][__][__][__][__][__]
AB: gaste dados e cure o total
Todos/DL",
  "#Fúria Divina
Fúria: 1º acerto/turno +1d6+7 Necr ou Rad",
  "#Ataque Extra",
  "#Concentração Fanática
1×/Fúria, falha Salv: refaça com +Dano da Fúria",
  "#Bote Instintivo
Entrar em Fúria: mova até ½ Desl",
  "#Instintos Primitivos
Vant em Inic",
  "#Golpe Brutal
Atq Imprudente: abra mão da Vant em 1 Atq FOR; acerto +1d10 e escolha:
> Debilitador: Desl -4,5m
> Poderoso: empurra 4,5m; mova ½ Desl até alvo sem Atq Oport
> Atordoante: Desv na próx Salv; sem Atq Oport
> Destruidor: próx Atq de outra criatura contra alvo +5",
  "#Presença Zelosa [__]
AB: até 10 criaturas a 18m têm Vant em Atq/Salv até próx turno
DL ou gaste 1 Fúria",
  "#Fúria Implacável
Fúria, 0 PV: Salv CON CD10; sucesso PV = 2× nível
Novo uso: CD +5; DC/DL: CD10",
  "#Fúria dos Deuses [__]
Entrar em Fúria: forma divina por 1 min. DL
> Res Necr/Psiq/Rad
> Reação: criatura a 9m cairia a 0 PV → gaste 1 Fúria; PV = seu nível
> Voo = Desl; pode pairar",
]
`;
